2009-02-02  Murray Cumming  <murrayc@murrayc.com>>

	* glom/base_db.cc: :set_field_value_in_database(): Correct a 
	copy/paste typo that was probably introduced when switching to using 
	parameters, so we now actually specify the primary key, so we really 
	change the data in the database.

2009-01-31  Johannes Schmid  <jschmid@openismus.com>

	* glom/application.cc (on_document_load()):
	Reinit cancelled state and some more cleanups.
	Fixes #569721 – Glom behaves strange when you cancel the new dialog

2009-01-30  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom.glade: Make the labels FILL and EXPAND so they really 
	align left instead of centering. This broke when I resaved with a 
	newer glade-2.

2009-01-30  Murray Cumming  <murrayc@murrayc.com>

	Added some TODO comments where we would like to use SQL parameters 
	instead of Field::sql(), if we can figure out how to do that for 
	fragments of SQL, or how to refactor the code to parse the whole 
	SQL query at once.

2009-01-29  Johannes Schmid  <jhs@openismus.com>

	* glom/base_db.cc:
	* glom/base_db_table_data.cc:
	* glom/mode_data/box_data_calendar_related.cc:
	* glom/mode_data/box_data_list_related.cc:
	Move the rest of queries from sql() to use params where this made sense.
	Some methods generate random sql that is executed elsewhere which means that
	they cannot use parameters themselves. I did not touch those.
	
	* glom/libglom/data_structure/field.cc:
	* glom/libglom/data_structure/field.h:
	Added get_holder(value, name) to avoid having to use temporary field to
	be able to use get_holder() and get_gda_holder_string()

2009-01-29  Johannes Schmid  <jschmid@openismus.com>

	* glom/base_db.cc:
	* glom/base_db_table_data.cc:
	Converted more queries to use parameters

2009-01-27  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.cc: auto_increment_insert_first_if_necessary(),
	get_next_auto_increment_value(), set_database_preferences():