@@ -1,3 +1,12 @@
+2009-02-02  Murray Cumming  <murrayc@murrayc.com>
+
+	* glom/base_db.cc: query_execute_select(), query_execute(): 
+	When using --debug_sql, use Statement::to_sql() to show the actual 
+	SQL with actual values, though this does not seem to work for 
+	non-SELECT queries.
+	* glom/mode_data/box_data.cc: refresh_related_fields(): Some extra 
+	error checking.
+
 2009-02-02  Murray Cumming  <murrayc@murrayc.com>>
 
 	* glom/base_db.cc: :set_field_value_in_database(): Correct a 
